--- a/package.json
+++ b/package.json
@@ -1,18 +1,8 @@
 {
-  "name": "bootstrap-npm-starter",
-  "version": "1.4.0",
-  "private": true,
-  "description": "Demo project for building a Bootstrap powered site via npm.",
-  "author": "mdo",
-  "license": "MIT",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/twbs/bootstrap-npm-starter.git"
-  },
-  "bugs": {
-    "url": "https://github.com/twbs/bootstrap-npm-starter/issues"
-  },
-  "homepage": "https://github.com/twbs/bootstrap-npm-starter#readme",
+  "name": "bootstap-starter",
+  "version": "1.0.0",
+  "description": "<p align=\"center\">   <img src=\".github/logo.png\" width=\"300\" height=\"175\" alt=\"Bootstrap npm logo\"> </p>",
+  "main": "index.js",
   "scripts": {
     "build": "npm run css",
     "css-compile": "node-sass --include-path node_modules --output-style compressed --source-map true --source-map-contents true --precision 6 scss -o assets/css/",
@@ -25,30 +15,32 @@
     "watch": "nodemon -e html,scss -x \"npm run css\"",
     "test": "npm run css-lint && npm run css"
   },
-  "keywords": [
-    "bootstrap",
-    "sass",
-    "css",
-    "javascript",
-    "starter",
-    "template"
-  ],
-  "dependencies": {
-    "bootstrap": "^4.6.0",
-    "bootstrap-icons": "^1.4.0",
-    "jquery": "^3.6.0",
-    "popper.js": "^1.16.1"
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/miraEbrahim/bootstap-starter.git"
   },
-  "devDependencies": {
-    "autoprefixer": "^10.2.5",
-    "node-sass": "^5.0.0",
-    "nodemon": "^2.0.7",
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/miraEbrahim/bootstap-starter/issues"
+  },
+  "homepage": "https://github.com/miraEbrahim/bootstap-starter#readme",
+  "dependencies": {
+    "@popperjs/core": "^2.11.2",
+    "autoprefixer": "^10.4.2",
+    "bootstrap": "^5.1.3",
+    "bootstrap-icons": "^1.8.1",
+    "jquery": "^3.6.0",
+    "live-server": "^1.2.1",
+    "node-sass": "^7.0.1",
+    "nodemon": "^2.0.15",
     "npm-run-all": "^4.1.5",
-    "postcss": "^8.2.10",
-    "postcss-cli": "^8.3.1",
-    "purgecss": "^4.0.2",
-    "serve": "^11.3.2",
-    "stylelint": "^13.12.0",
-    "stylelint-config-twbs-bootstrap": "^2.1.0"
+    "postcss": "^8.4.8",
+    "postcss-cli": "^9.1.0",
+    "purgecss": "^4.1.3",
+    "sass": "^1.49.9",
+    "serve": "^13.0.2",
+    "stylelint": "^14.5.3",
+    "stylelint-config-twbs-bootstrap": "^3.0.1"
   }
 }
